# yolo-tensorrt-cpp

./: CMakeLists.txt  README.md  startDocker.sh
modules/: class_yolo_detector.hpp  yolo.cpp
src/: custom_detector.cpp
